--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         app:showAsAction="always"
+        android:id="@+id/item_background_scan"
+        android:title="@string/nav_item_background_scan" />
+    <item
+        app:showAsAction="never"
         android:id="@+id/item_ota"
         android:title="@string/nav_item_ota" />
 
