--- a/app/src/main/res/layout/fragment_node_info.xml
+++ b/app/src/main/res/layout/fragment_node_info.xml
@@ -27,7 +27,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/ic_node_name_info" />
+                android:src="@drawable/img_info" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -65,7 +65,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/ic_unicast_address" />
+                android:src="@drawable/img_unicast" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -105,7 +105,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/ic_uuid" />
+                android:src="@drawable/img_uuid" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -144,7 +144,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/ic_network_name" />
+                android:src="@drawable/img_subnet" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -183,7 +183,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/ic_key" />
+                android:src="@drawable/img_key" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -222,7 +222,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/ic_key" />
+                android:src="@drawable/img_key" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -261,7 +261,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/ic_key" />
+                android:src="@drawable/img_key" />
 
             <LinearLayout
                 android:layout_width="0dp"
