--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -73,7 +73,7 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_key" />
+                        android:src="@drawable/img_key" />
 
                     <TextView
                         android:id="@+id/tv_group_app_key_index"
