--- a/app/src/main/res/layout/item_subnet.xml
+++ b/app/src/main/res/layout/item_subnet.xml
@@ -82,7 +82,7 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_key" />
+                        android:src="@drawable/img_key" />
 
                     <TextView
                         android:id="@+id/tv_subnet_key_index"
